--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <body>
 
     <div class="d-flex flex-column flex-md-row align-items-center p-3 px-md-4 mb-3 bg-white border-bottom box-shadow">
-      <h5 class="my-0 mr-md-auto font-weight-normal">hostedbygithub</h5>
+      <h5 class="my-0 mr-md-auto font-weight-normal"><a href="https://hostedbygithub.github.io"><b>hostedbygithub</b></a></h5>
       <nav class="my-2 my-md-0 mr-md-3">
         <a class="p-2 text-dark" href="https://hostedbygithub.github.io">Home</a>
         <a class="p-2 text-dark" href="https://hostedbygithub.github.io">Blog</a>
@@ -30,8 +30,8 @@
     </div>
 
     <div class="pricing-header px-3 py-3 pt-md-5 pb-md-4 mx-auto text-center">
-      <h1 class="display-4">Example</h1>
-      <p class="lead">Quickly build an effective pricing table for your potential customers with this Bootstrap example. It's built with default Bootstrap components and utilities with little customization.</p>
+      <h1 class="display-4">Welcome to hostedbygithub!</h1>
+      <p class="lead">This is sample Bootstrap site. It's built with default Bootstrap components and utilities with little customization.</p>
     </div>
 
     <div class="container">
@@ -48,7 +48,7 @@
               <li>Email support</li>
               <li>Help center access</li>
             </ul>
-            <button type="button" class="btn btn-lg btn-block btn-outline-primary">Sign up for free</button>
+            <button type="button" class="btn btn-lg btn-block btn-outline-primary"><a href="https://hostedbygithub.github.io">Sign up for free</a></button>
           </div>
         </div>
         <div class="card mb-4 box-shadow">
@@ -63,7 +63,7 @@
               <li>Priority email support</li>
               <li>Help center access</li>
             </ul>
-            <button type="button" class="btn btn-lg btn-block btn-primary">Get started</button>
+            <button type="button" class="btn btn-lg btn-block btn-outline-primary"><a href="https://hostedbygithub.github.io">Get started</a></button>
           </div>
         </div>
         <div class="card mb-4 box-shadow">
@@ -78,7 +78,7 @@
               <li>Phone and email support</li>
               <li>Help center access</li>
             </ul>
-            <button type="button" class="btn btn-lg btn-block btn-primary">Contact us</button>
+            <button type="button" class="btn btn-lg btn-block btn-outline-primary"><a href="https://hostedbygithub.github.io">Contact us</a></button>
           </div>
         </div>
       </div>
@@ -87,33 +87,28 @@
         <div class="row">
           <div class="col-12 col-md">
             <img class="mb-2" src="./index_files/bootstrap-solid.svg" alt="" width="24" height="24">
-            <small class="d-block mb-3 text-muted">© 2017-2018. hostedbygithub. <br>All Rights Reserved.</small>
+            <small class="d-block mb-3 text-muted">© 2018. <b><a href="https://hostedbygithub.github.io">hostedbygithub</a></b>. <br>All Rights Reserved.</small>
           </div>
           <div class="col-6 col-md">
-            <h5>Features</h5>
+            <h5>Follow</h5>
             <ul class="list-unstyled text-small">
-              <li><a class="text-muted" href="https://hostedbygithub.github.io">Cool stuff</a></li>
-              <li><a class="text-muted" href="https://hostedbygithub.github.io">Random feature</a></li>
-              <li><a class="text-muted" href="https://hostedbygithub.github.io">Team feature</a></li>
-              <li><a class="text-muted" href="https://hostedbygithub.github.io">Stuff for developers</a></li>
-              <li><a class="text-muted" href="https://hostedbygithub.github.io">Another one</a></li>
-              <li><a class="text-muted" href="https://hostedbygithub.github.io">Last time</a></li>
+              <li><a class="text-muted" href="https://hostedbygithub.github.io">Twitter</a></li>
+              <li><a class="text-muted" href="https://hostedbygithub.github.io">Github</a></li>
+              <li><a class="text-muted" href="https://hostedbygithub.github.io">Instagram</a></li>
             </ul>
           </div>
           <div class="col-6 col-md">
             <h5>Resources</h5>
             <ul class="list-unstyled text-small">
-              <li><a class="text-muted" href="https://hostedbygithub.github.io">Resource</a></li>
-              <li><a class="text-muted" href="https://hostedbygithub.github.io">Resource name</a></li>
-              <li><a class="text-muted" href="https://hostedbygithub.github.io">Another resource</a></li>
-              <li><a class="text-muted" href="https://hostedbygithub.github.io">Final resource</a></li>
+              <li><a class="text-muted" href="https://hostedbygithub.github.io">Support</a></li>
+              <li><a class="text-muted" href="https://hostedbygithub.github.io">Help</a></li>
             </ul>
           </div>
           <div class="col-6 col-md">
             <h5>About</h5>
             <ul class="list-unstyled text-small">
-              <li><a class="text-muted" href="https://hostedbygithub.github.io">Team</a></li>
-              <li><a class="text-muted" href="https://hostedbygithub.github.io">Locations</a></li>
+              <li><a class="text-muted" href="https://hostedbygithub.github.io">Disclaimer</a></li>
+              <li><a class="text-muted" href="https://hostedbygithub.github.io">Blog</a></li>
               <li><a class="text-muted" href="https://hostedbygithub.github.io">Privacy</a></li>
               <li><a class="text-muted" href="https://hostedbygithub.github.io">Terms</a></li>
             </ul>
