--- a/checkout/index.html
+++ b/checkout/index.html
@@ -7,7 +7,7 @@
     <meta name="author" content="">
     <link rel="icon" href="https://getbootstrap.com/favicon.ico">
 
-    <title>Checkout example for Bootstrap</title>
+    <title>hostedbygithub</title>
 
     <!-- Bootstrap core CSS -->
     <link href="./css/bootstrap.min.css" rel="stylesheet">
@@ -20,9 +20,9 @@
 
     <div class="container">
       <div class="py-5 text-center">
-        <img class="d-block mx-auto mb-4" src="./bootstrap-solid.svg" alt="" width="72" height="72">
-        <h2>Checkout form</h2>
-        <p class="lead">Below is an example form built entirely with Bootstrap's form controls. Each required form group has a validation state that can be triggered by attempting to submit the form without completing it.</p>
+        <a href="https://hostedbygithub.github.io/checkout"><img class="d-block mx-auto mb-4" src="./bootstrap-solid.svg" alt="" width="72" height="72"></a>
+        <h2>hostedbygithub Checkout form</h2>
+        <p class="lead">Built entirely with Bootstrap's form controls.</p>
       </div>
 
       <div class="row">
@@ -219,17 +219,17 @@
               </div>
             </div>
             <hr class="mb-4">
-            <button class="btn btn-primary btn-lg btn-block" type="submit">Continue to checkout</button>
+            <a href="https://hostedbygithub.github.io/checkout"><button class="btn btn-outline-primary btn-lg btn-block" type="submit">Continue to checkout</button></a>
           </form>
         </div>
       </div>
 
       <footer class="my-5 pt-5 text-muted text-center text-small">
-        <p class="mb-1">© 2017-2018 Company Name</p>
+        <p class="mb-1">© 2018. <b><a href="https://hostedbygithub.github.io/checkout">hostedbygithub</a></b> <br>All Rights Reserved</p>
         <ul class="list-inline">
-          <li class="list-inline-item"><a href="https://getbootstrap.com/docs/4.0/examples/checkout/#">Privacy</a></li>
-          <li class="list-inline-item"><a href="https://getbootstrap.com/docs/4.0/examples/checkout/#">Terms</a></li>
-          <li class="list-inline-item"><a href="https://getbootstrap.com/docs/4.0/examples/checkout/#">Support</a></li>
+          <li class="list-inline-item"><a href="https://hostedbygithub.github.io/checkout">Privacy</a></li>
+          <li class="list-inline-item"><a href="https://hostedbygithub.github.io/checkout">Terms</a></li>
+          <li class="list-inline-item"><a href="https://hostedbygithub.github.io/checkout">Support</a></li>
         </ul>
       </footer>
     </div>
