--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
         <a class="p-2 text-dark" href="https://hostedbygithub.github.io">Blog</a>
         <a class="p-2 text-dark" href="https://hostedbygithub.github.io">About</a>
         <a class="p-2 text-dark" href="https://hostedbygithub.github.io">Contact</a>
+        <a class="p-2 text-dark" href="https://hostedbygithub.github.io/checkout">Checkout</a>
       </nav>
       <a class="btn btn-outline-primary" href="https://hostedbygithub.github.io">Sign up</a>
     </div>
