--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
         <div class="row">
           <div class="col-12 col-md">
             <img class="mb-2" src="./index_files/bootstrap-solid.svg" alt="" width="24" height="24">
-            <small class="d-block mb-3 text-muted">© 2018. <b><a href="https://hostedbygithub.github.io">hostedbygithub</a></b>. <br>All Rights Reserved.</small>
+            <small class="d-block mb-3 text-muted">© 2018. <b><a href="https://hostedbygithub.github.io">hostedbygithub</a></b> <br>All Rights Reserved</small>
           </div>
           <div class="col-6 col-md">
             <h5>Follow</h5>
