--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
       <h5 class="my-0 mr-md-auto font-weight-normal"><a href="http://hostedbygithub.online"><b>hostedbygithub</b></a></h5>
       <nav class="my-2 my-md-0 mr-md-3">
         <a class="p-2 text-dark" href="http://hostedbygithub.online">Home</a>
-        <a class="p-2 text-dark" href="https://hostedbygithub.online">Blog</a>
-        <a class="p-2 text-dark" href="https://hostedbygithub.online">About</a>
-        <a class="p-2 text-dark" href="https://hostedbygithub.online">Contact</a>
-          <a class="p-2 text-dark" href="https://hostedbygithub.online/checkout">Checkout</a>
+        <a class="p-2 text-dark" href="http://hostedbygithub.online">Blog</a>
+        <a class="p-2 text-dark" href="http://hostedbygithub.online">About</a>
+        <a class="p-2 text-dark" href="http://hostedbygithub.online">Contact</a>
+          <a class="p-2 text-dark" href="http://hostedbygithub.online/checkout">Checkout</a>
       </nav>
       <a class="btn btn-outline-primary" href="http://hostedbygithub.online">Sign up</a>
     </div>
