--- a/checkout/index.html
+++ b/checkout/index.html
@@ -20,7 +20,7 @@
 
     <div class="container">
       <div class="py-5 text-center">
-        <a href="https://hostedbygithub.github.io/checkout"><img class="d-block mx-auto mb-4" src="./bootstrap-solid.svg" alt="" width="72" height="72"></a>
+        <a href="http://hostedbygithub.online"><img class="d-block mx-auto mb-4" src="./bootstrap-solid.svg" alt="" width="72" height="72"></a>
         <h2>hostedbygithub Checkout form</h2>
         <p class="lead">Built entirely with Bootstrap's form controls.</p>
       </div>
@@ -219,17 +219,17 @@
               </div>
             </div>
             <hr class="mb-4">
-            <a href="https://hostedbygithub.github.io/checkout"><button class="btn btn-outline-primary btn-lg btn-block" type="submit">Continue to checkout</button></a>
+            <a href="http://hostedbygithub.online/checkout"><button class="btn btn-outline-primary btn-lg btn-block" type="submit">Continue to checkout</button></a>
           </form>
         </div>
       </div>
 
       <footer class="my-5 pt-5 text-muted text-center text-small">
-        <p class="mb-1">© 2018. <b><a href="https://hostedbygithub.github.io/checkout">hostedbygithub</a></b> <br>All Rights Reserved</p>
+        <p class="mb-1">© 2018. <b><a href="http://hostedbygithub.online/checkout">hostedbygithub</a></b> <br>All Rights Reserved</p>
         <ul class="list-inline">
-          <li class="list-inline-item"><a href="https://hostedbygithub.github.io/checkout">Privacy</a></li>
-          <li class="list-inline-item"><a href="https://hostedbygithub.github.io/checkout">Terms</a></li>
-          <li class="list-inline-item"><a href="https://hostedbygithub.github.io/checkout">Support</a></li>
+          <li class="list-inline-item"><a href="http://hostedbygithub.online/checkout">Privacy</a></li>
+          <li class="list-inline-item"><a href="http://hostedbygithub.online/checkout">Terms</a></li>
+          <li class="list-inline-item"><a href="http://hostedbygithub.online/checkout">Support</a></li>
         </ul>
       </footer>
     </div>
