--- a/404.html
+++ b/404.html
@@ -13,7 +13,7 @@
 
 <body>
   <header class="page-container page-container-responsive space-top-4">
-    <a href="http://hostedbygithub.online">Home</a>
+    <a href="https://hostedbygithub.online">Home</a>
       <span class="screen-reader-only">
            </span>
     </a>
@@ -27,9 +27,9 @@
           <h6>Error code: 404</h6>
           <ul class="list-unstyled">
             <li>Here are some helpful links instead:</li>
-            <li><a href="http://hostedbygithub.online">Home</a></li>
-            <li><a href="http://hostedbygithub.online">Help</a></li>
-            <li><a href="http://hostedbygithub.online">Contact</a></li>
+            <li><a href="https://hostedbygithub.online">Home</a></li>
+            <li><a href="https://hostedbygithub.online">Help</a></li>
+            <li><a href="https://hostedbygithub.online">Contact</a></li>
           </ul>
         </div>
         <div class="col-5 col-middle text-center">
