--- a/index.html
+++ b/index.html
@@ -19,15 +19,15 @@
   <body>
 
     <div class="d-flex flex-column flex-md-row align-items-center p-3 px-md-4 mb-3 bg-white border-bottom box-shadow">
-      <h5 class="my-0 mr-md-auto font-weight-normal"><a href="http://hostedbygithub.online"><b>hostedbygithub</b></a></h5>
+      <h5 class="my-0 mr-md-auto font-weight-normal"><a href="https://hostedbygithub.online"><b>hostedbygithub</b></a></h5>
       <nav class="my-2 my-md-0 mr-md-3">
-        <a class="p-2 text-dark" href="http://hostedbygithub.online">Home</a>
-        <a class="p-2 text-dark" href="http://hostedbygithub.online">Blog</a>
-        <a class="p-2 text-dark" href="http://hostedbygithub.online">About</a>
-        <a class="p-2 text-dark" href="http://hostedbygithub.online">Contact</a>
-          <a class="p-2 text-dark" href="http://hostedbygithub.online/checkout">Checkout</a>
+        <a class="p-2 text-dark" href="https://hostedbygithub.online">Home</a>
+        <a class="p-2 text-dark" href="https://hostedbygithub.online">Blog</a>
+        <a class="p-2 text-dark" href="https://hostedbygithub.online">About</a>
+        <a class="p-2 text-dark" href="https://hostedbygithub.online">Contact</a>
+          <a class="p-2 text-dark" href="https://hostedbygithub.online/checkout">Checkout</a>
       </nav>
-      <a class="btn btn-outline-primary" href="http://hostedbygithub.online">Sign up</a>
+      <a class="btn btn-outline-primary" href="https://hostedbygithub.online">Sign up</a>
     </div>
 
     <div class="pricing-header px-3 py-3 pt-md-5 pb-md-4 mx-auto text-center">
@@ -49,7 +49,7 @@
               <li>Email support</li>
               <li>Help center access</li>
             </ul>
-            <button type="button" class="btn btn-lg btn-block btn-outline-primary"><a href="http://hostedbygithub.online">Sign up for free</a></button>
+            <button type="button" class="btn btn-lg btn-block btn-outline-primary"><a href="https://hostedbygithub.online">Sign up for free</a></button>
           </div>
         </div>
         <div class="card mb-4 box-shadow">
@@ -64,7 +64,7 @@
               <li>Priority email support</li>
               <li>Help center access</li>
             </ul>
-            <button type="button" class="btn btn-lg btn-block btn-outline-primary"><a href="http://hostedbygithub.online">Get started</a></button>
+            <button type="button" class="btn btn-lg btn-block btn-outline-primary"><a href="https://hostedbygithub.online">Get started</a></button>
           </div>
         </div>
         <div class="card mb-4 box-shadow">
@@ -79,7 +79,7 @@
               <li>Phone and email support</li>
               <li>Help center access</li>
             </ul>
-            <button type="button" class="btn btn-lg btn-block btn-outline-primary"><a href="http://hostedbygithub.online">Contact us</a></button>
+            <button type="button" class="btn btn-lg btn-block btn-outline-primary"><a href="https://hostedbygithub.online">Contact us</a></button>
           </div>
         </div>
       </div>
@@ -88,30 +88,30 @@
         <div class="row">
           <div class="col-12 col-md">
             <img class="mb-2" src="./index_files/bootstrap-solid.svg" alt="" width="24" height="24">
-            <small class="d-block mb-3 text-muted">© 2018. <b><a href="http://hostedbygithub.online">hostedbygithub</a></b>. <br>All Rights Reserved.</small>
+            <small class="d-block mb-3 text-muted">© 2018. <b><a href="https://hostedbygithub.online">hostedbygithub</a></b>. <br>All Rights Reserved.</small>
           </div>
           <div class="col-6 col-md">
             <h5>Follow</h5>
             <ul class="list-unstyled text-small">
-              <li><a class="text-muted" href="http://hostedbygithub.online">Twitter</a></li>
-              <li><a class="text-muted" href="http://hostedbygithub.online">Github</a></li>
-              <li><a class="text-muted" href="http://hostedbygithub.online">Instagram</a></li>
+              <li><a class="text-muted" href="https://hostedbygithub.online">Twitter</a></li>
+              <li><a class="text-muted" href="https://hostedbygithub.online">Github</a></li>
+              <li><a class="text-muted" href="https://hostedbygithub.online">Instagram</a></li>
             </ul>
           </div>
           <div class="col-6 col-md">
             <h5>Resources</h5>
             <ul class="list-unstyled text-small">
-              <li><a class="text-muted" href="http://hostedbygithub.online">Support</a></li>
-              <li><a class="text-muted" href="http://hostedbygithub.online">Help</a></li>
+              <li><a class="text-muted" href="https://hostedbygithub.online">Support</a></li>
+              <li><a class="text-muted" href="https://hostedbygithub.online">Help</a></li>
             </ul>
           </div>
           <div class="col-6 col-md">
             <h5>About</h5>
             <ul class="list-unstyled text-small">
-              <li><a class="text-muted" href="http://hostedbygithub.online">Disclaimer</a></li>
-              <li><a class="text-muted" href="http://hostedbygithub.online">Blog</a></li>
-              <li><a class="text-muted" href="http://hostedbygithub.online">Privacy</a></li>
-              <li><a class="text-muted" href="http://hostedbygithub.online">Terms</a></li>
+              <li><a class="text-muted" href="https://hostedbygithub.online">Disclaimer</a></li>
+              <li><a class="text-muted" href="https://hostedbygithub.online">Blog</a></li>
+              <li><a class="text-muted" href="https://hostedbygithub.online">Privacy</a></li>
+              <li><a class="text-muted" href="https://hostedbygithub.online">Terms</a></li>
             </ul>
           </div>
         </div>
